#execute_process(COMMAND autoreconf -vif WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
execute_process(COMMAND mkdir build WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
FILE(WRITE build/CMakeLists.txt "execute_process(COMMAND ../configure --prefix=\${CMAKE_CURRENT_SOURCE_DIR}/install --disable-gbtcl WORKING_DIRECTORY \${CMAKE_CURRENT_SOURCE_DIR})\n")
FILE(APPEND build/CMakeLists.txt "execute_process(COMMAND make WORKING_DIRECTORY \${CMAKE_CURRENT_SOURCE_DIR} WORKING_DIRECTORY \${CMAKE_CURRENT_SOURCE_DIR})\n")
FILE(APPEND build/CMakeLists.txt "execute_process(COMMAND make install WORKING_DIRECTORY \${CMAKE_CURRENT_SOURCE_DIR} WORKING_DIRECTORY \${CMAKE_CURRENT_SOURCE_DIR})\n")
add_subdirectory(build)
